# graduation_diagnostic_LLM

./: .gitignore  Dockerfile  LICENSES.md  docker-compose.yaml  graduation_parser_program.py  llm(내가 만들어야하는거).py  llm.py  make_chroma.py  microservice.yaml  noname.csv  pyproject.toml  test_parser.py  web_server.py
.ipynb_checkpoints/: test-checkpoint.ipynb
LLM/: Dockerfile  llm.py  main.py  requirements.txt
data/: graduation.csv  noname.json  noname.txt  noname.xlsx
db/: example.txt  noname.txt  test.py
embeddings/: Kanana.py  test.py  test2.py  test3.py
llm_friendly_parsing/: Dockerfile  llm_friendly_parsing.py  main.py
makeTxtFile/: gemini.py  pdf_to_txt.py
output/: noname.json
parser/: Dockerfile  main.py  parser_logic.py
server/: Dockerfile  main.py
