[project]
name = "micro-service-programming"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.120.4,<0.121.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "chromadb (>=1.3.0,<2.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "langchain-huggingface (>=1.0.0,<2.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "pip-licenses (>=5.5.0,<6.0.0)",
]

[tool.poetry]
packages = [{include = "micro_service_programming", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
