[project]
name = "micro-service-programming"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.110,<0.121",
    "pdfplumber>=0.11.7,<0.12",

    "langchain>=0.2.10,<0.3.0",
    "langchain-core>=0.2.30,<0.3.0",
    "langchain-community>=0.2.8,<0.3.0",
    "langchain-chroma>=0.1.2,<0.2.0",
    "langchain-ollama>=0.1.0,<0.2.0",

    "chromadb>=0.4.24,<0.5.0",

    "transformers>=4.41,<5.0",
    "sentence-transformers>=3.0,<4.0",
    "huggingface-hub>=0.23,<0.24",
    "torch>=2.2,<2.3",

    "markdown>=3.10,<4.0",
    "unstructured>=0.18.20,<0.19",

    "tabulate>=0.9,<0.10",
    "pandas>=2.3.3,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
]



[tool.poetry]
packages = [{include = "micro_service_programming", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
